--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="img_wrapper">
-        <img src="./public/img/banner_img.png" alt="banner image" />
+        <!-- <img src="./public/img/banner_img.png" alt="banner image" /> -->
       </div>
     </section>
     <section class="mobile_app_wrapper">
