--- a/index.html
+++ b/index.html
@@ -8,47 +8,76 @@
   </head>
   <body>
     <main>
-      <section class="min-h-screen relative bg-smoke">
-        <div
-          class="absolute bottom-0 left-auto right-0 top-auto max-w-screen-xl"
-        >
-          <img src="img/banner_img.png" class="w-full ml-auto" alt="" />
-        </div>
-        <div
-          class="px-3 md:w-10/12 xl:w-9/12 mx-auto h-screen flex items-center"
-        >
-          <div class="max-w-2xl grid gap-7">
-            <h2
-              class="text-3xl md:text-[40px] md:leading-snug max-w-screen-sm xl:max-w-none lg:text-5xl lg:leading-tight xl:text-[55px] 2xl:text-[55px] pr-10 pt-10 xxl:leading-tight xl:leading-tight font-gilroyLight"
+      <section class="bg-smoke flex flex-row d">
+        <div class="d flex-1 grid place-content-end">
+          <h2
+            class="text-3xl md:text-[40px] md:leading-snug max-w-screen-sm lg:text-5xl lg:leading-tight xl:text-[55px] 2xl:text-[55px] pr-10 pt-10 xxl:leading-tight xl:leading-tight font-gilroyLight"
+          >
+            Plug into India's Largest
+            <b class="font-gilroyBold">EV Charging</b> Network with
+            <b class="font-gilroyBold">VerdeMobility</b> EV Life App
+          </h2>
+          <span class="text-3xl font-poppinsLight pr-10"
+            >The road to a sustainable future
+            <b class="font-poppin">begins here!</b></span
+          >
+          <div class="flex flex-wrap gap-10 mt-7">
+            <a
+              href="https://apps.apple.com/in/app/verdemobility/id1622189313"
+              rel="noreferrer"
+              target="_blank"
             >
-              Plug into India's Largest
-              <b class="font-gilroyBold">EV Charging</b> Network with
-              <b class="font-gilroyBold">VerdeMobility</b> EV Life App
-            </h2>
-            <span class="text-3xl font-poppinsLight pr-10"
-              >The road to a sustainable future
-              <b class="font-poppin">begins here!</b></span
+              <img src="icons/app_link_apple.svg" alt="app store" />
+            </a>
+            <a
+              href="https://play.google.com/store/apps/details?id=com.verdemobility.ev.charger"
+              target="_blank"
+              rel="noreferrer"
             >
-            <div class="flex flex-wrap gap-10 mt-7">
-              <a
-                href="https://apps.apple.com/in/app/verdemobility/id1622189313"
-                rel="noreferrer"
-                target="_blank"
-              >
-                <img src="icons/app_link_apple.svg" alt="app store" />
-              </a>
-              <a
-                href="https://play.google.com/store/apps/details?id=com.verdemobility.ev.charger"
-                target="_blank"
-                rel="noreferrer"
-              >
-                <img src="icons/app_link_playstore.svg" alt="play store" />
-              </a>
-            </div>
+              <img src="icons/app_link_playstore.svg" alt="play store" />
+            </a>
           </div>
         </div>
+        <div class="d flex-1"></div>
       </section>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
+
+<!-- <section class="min-h-screen relative bg-smoke">
+  <div class="flex flex-row d">
+    <div class="d flex-1">
+      <div class="d ml-auto flex justify-end flex-col items-center">
+        <h2
+          class="text-3xl md:text-[40px] md:leading-snug max-w-screen-sm xl:max-w-none lg:text-5xl lg:leading-tight xl:text-[55px] 2xl:text-[55px] pr-10 pt-10 xxl:leading-tight xl:leading-tight font-gilroyLight d inline-block"
+        >
+          Plug into India's Largest
+          <b class="font-gilroyBold">EV Charging</b> Network with
+          <b class="font-gilroyBold">VerdeMobility</b> EV Life App
+        </h2>
+        <span class="text-3xl font-poppinsLight pr-10"
+          >The road to a sustainable future
+          <b class="font-poppin">begins here!</b></span
+        >
+        <div class="flex flex-wrap gap-10 mt-7">
+          <a
+            href="https://apps.apple.com/in/app/verdemobility/id1622189313"
+            rel="noreferrer"
+            target="_blank"
+          >
+            <img src="icons/app_link_apple.svg" alt="app store" />
+          </a>
+          <a
+            href="https://play.google.com/store/apps/details?id=com.verdemobility.ev.charger"
+            target="_blank"
+            rel="noreferrer"
+          >
+            <img src="icons/app_link_playstore.svg" alt="play store" />
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="d flex-1"></div>
+  </div>
+</section> -->
