--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         To Our Network.
       </h2>
       <p data-aos="zoom-in"> 
-        The VerdeMobility EV Life App is available for both App Store and Google Play Store. Download the app and let's charge ahead for a greener & better future.
+        The VerdeMobility EV Life App is available for both App Store and Google Play Store. Download the app and let's charge ahead for a greener and better future.
       </p>
     </section>
 
     <footer>
       <span >
-        Copyright 2022 ©<span class="text-green">verdemobility</span>. All
+        Copyright 2022 © <span class="text-green">VerdeMobility</span>. All
         Rights Reserved.
       </span>
       <div class="icons_wrapper">
