webp code chage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>VerdeMobility</title>
     <link rel="stylesheet" type="text/css" href="./index.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
@@ -15,17 +15,22 @@
           <img src="./public/icons/logo.svg" alt="verdemobility" />
         </a>
         <div class="links_wrapper">
-          <a href="#" class="contact">Contact Us</a>
-          <a href="#" class="login">Login</a>
+          <a href="https://www.verdemobility.com/" target="_blank"  rel="noreferrer noopener"  class="contact">Contact Us</a>
+          <a href="https://www.verdemobility.com/" target="_blank"  rel="noreferrer noopener" class="login">Login</a>
         </div>
       </nav>
     </header>
     <section class="mobile_contact_btn">
-      <a href="#">Contact</a>
+      <a href="#">Contact Us</a>
     </section>
     <section class="banner_wrapper">
       <div class="text_wrapper">
-        <h2 data-aos="zoom-in">Plug into India's Largest <b>EV Charging</b> Network with <b>VerdeMobility</b> EV Life App</b></h2>
+        <h2 data-aos="zoom-in">Plug into India's Largest 
+          <b>EV Charging</b> 
+          Network with 
+          <b>VerdeMobility</b> 
+          EV Life App</b>
+        </h2>
         <span
         data-aos="zoom-in">The road to a sustainable future 
           <b >begins here!</b></span
